# multi-pong

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
common/: CMakeLists.txt  pong.h
common/src/: net_commands.cpp
scripts/: debug.sh  deploy.sh  run.sh
server/: CMakeLists.txt
server/include/server/: server.h
server/src/: server.cpp
src/: main.cpp
src/game/: client.cpp  client.h  net_commands.cpp  net_commands.h  pong.h  server.cpp  server.h
